err/alignak-module-external-commands.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/alignak'...
Listing './etc/alignak/arbiter'...
Listing './etc/alignak/arbiter/modules'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alignak_module_external_commands'...
Listing './lib/python3.5/site-packages/alignak_module_external_commands/etc'...
Listing './lib/python3.5/site-packages/alignak_module_external_commands/etc/arbiter'...
Listing './lib/python3.5/site-packages/alignak_module_external_commands/etc/arbiter/modules'...
Compiling './lib/python3.5/site-packages/alignak_module_external_commands/external_commands.py'...
***   File "./lib/python3.5/site-packages/alignak_module_external_commands/external_commands.py", line 108
    os.mkfifo(self.file_path, 0660)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/alignak_module_external_commands/plugins'...
Listing './lib/python3.5/site-packages/alignak_module_external_commands-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
